updated grid 600X600 percent to pixal

--- a/main.css
+++ b/main.css
@@ -9,8 +9,8 @@ body{
 #gameArea{
 	position: relative;
 	margin-top: 60px;
-	margin-left: 30.82%;
-	width: 37.66%;
+	margin-left: 491px;
+	width: 600px;
 	height: 600px;
 }
 #gameArea table{
@@ -19,12 +19,12 @@ body{
 	border-collapse:collapse;
 }
 #gameArea table tr{
-	width: 100%;
-	height: 12.5%;
+	width: 600px;
+	height: 75px;
 }
 #gameArea table tr td{
-	width: 12.5%;
-	height: 12.5%;
+	width: 75px;
+	height: 75px%;
 	background-color: white;
 }
 /* this div is a descendent of the div above */
